--- a/DashboardAWSDemo.Module/DashboardAWSDemo.Module.csproj
+++ b/DashboardAWSDemo.Module/DashboardAWSDemo.Module.csproj
@@ -157,6 +157,7 @@
     <EmbeddedResource Include="Model.DesignedDiffs.xafml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="BusinessObjects\ReadMe.txt" />
     <None Include="Controllers\ReadMe.txt" />
     <None Include="DatabaseUpdate\ReadMe.txt" />
