--- a/DashboardAWSDemo.Win/App.config
+++ b/DashboardAWSDemo.Win/App.config
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
-      <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <applicationSettings>
@@ -13,9 +13,9 @@
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <appSettings>
-    <add key="Modules" value=""/>
-    <add key="NewVersionServer" value=""/>
-    <add key="EnableDiagnosticActions" value="False"/>
+    <add key="Modules" value="" />
+    <add key="NewVersionServer" value="" />
+    <add key="EnableDiagnosticActions" value="False" />
     <!--
     Use the one of predefined values: None, ApplicationFolder, CurrentUserApplicationDataFolder. The default value is ApplicationFolder.
     <add key="TraceLogLocation" value="CurrentUserApplicationDataFolder"/>
@@ -24,8 +24,8 @@
     -->
   </appSettings>
   <connectionStrings>
-    <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\mssqllocaldb;Initial Catalog=DashboardAWSDemoEasyTest"/>
-    <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\mssqllocaldb;Initial Catalog=DashboardAWSDemo"/>
+    <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\mssqllocaldb;Initial Catalog=DashboardAWSDemoEasyTest" />
+    <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\mssqllocaldb;Initial Catalog=DashboardAWSDemo" />
     <!--
     Use the following connection string to connect to a Jet (Microsoft Access) database:
     <add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Password=;User ID=Admin;Data Source=DashboardAWSDemo.mdb;Mode=Share Deny None;"/>
@@ -34,13 +34,41 @@
   <system.diagnostics>
     <switches>
       <!-- Use the one of predefined values: 0-Off, 1-Errors, 2-Warnings, 3-Info, 4-Verbose. The default value is 3. -->
-      <add name="eXpressAppFramework" value="3"/>
+      <add name="eXpressAppFramework" value="3" />
       <!--
       <add name="XPO" value="3" />
       -->
     </switches>
   </system.diagnostics>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.XtraReports.v21.1" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-21.1.4.0" newVersion="21.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.ExpressApp.Xpo.v21.1" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-21.1.4.0" newVersion="21.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.ExpressApp.v21.1" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-21.1.3.0" newVersion="21.1.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Xpo.v21.1" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-21.1.3.0" newVersion="21.1.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Data.v21.1" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-21.1.3.0" newVersion="21.1.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DevExpress.Persistent.Base.v21.1" publicKeyToken="b88d1754d700e49a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-21.1.3.0" newVersion="21.1.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
